package com.deta.kopmart_backend.entity;

public class Wishlist {
}
